Fix build pipeline (#1080)
* Revert "COMAAS-1777 Fix docker-entrypoint (#1070)"

This reverts commit e508bcbb25e725f4c0fd3f7a5c7bdadfc29a2f40.

* Revert "COMAAS-1777 Start comaas as docker app rather as plain java (#1052)"

This reverts commit 5bc80b53428af676b95c2e0f42d3d4ea5cccd873.

* COMAAS-372: use still existing version for deps